manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-project
  template:
    metadata:
      labels:
        app: k8s-project
    spec:
      containers:
        - name: k8s-project
          image: josephshih13/k8s-project
