manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-project-svc
spec:
  type: ClusterIP
  selector:
    app: k8s-project
  ports:
    - port: 4567
      protocol: TCP
      targetPort: 9936
