manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-project-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: k8s-project-svc
          servicePort: 4567
