manifests/to-do.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: to-do
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-project-dep
  namespace: to-do
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-project
  template:
    metadata:
      labels:
        app: k8s-project
    spec:
      containers:
        - name: k8s-project
          image: josephshih13/k8s-project
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-project-ingress
  namespace: to-do
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: k8s-project-svc
          servicePort: 4567
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-project-svc
  namespace: to-do
spec:
  type: ClusterIP
  selector:
    app: k8s-project
  ports:
    - port: 4567
      protocol: TCP
      targetPort: 9936
